kustomization/components/networkpolicy-allow-to-internet/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-internet-networkpolicy
spec:
  egress:
    - ports:
        - port: 80
        - port: 443
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
  podSelector:
    matchLabels:
      hogs.tswn.us/internet-client: "true"
  policyTypes:
    - Egress
